# python_hw

./: .gitignore  README.md  README.md   pyproject.toml
hw_1/: 2.py  3.py  4.py  6.py
hw_1_exceptions/: 1.py  5.py
hw_2/: 1.py
hw_2_files/: 2.py  3.py  4.py
hw_2_files/files_hw_2/: input.txt
hw_3/: 2.py  4.py
hw_3_concurrency/: 1.py  3.py
hw_4_oop/: TODO.md  example.py  shop_model.py
hw_5_pydantic/: library_model.py
hw_algs/: reverse_str.py  reverse_words_sort.py
hw_math/: hw_graph.py
