[tool.poetry]
name = "hw-1-exceptions"
version = "0.1.0"
description = ""
authors = ["Иван Скиба <iskiba60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.9"
networkx = "^3.4.1"
matplotlib = "^3.9.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
